fixed side nav on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,8 +14,8 @@ body, html {
 
 /*icon image */
 .icon-holder img {
-	width: 30%;
-	height: 30%;
+	width: 35%;
+	height: 35%;
 	padding: 5%;
 }
 
@@ -98,7 +98,7 @@ body, html {
 	font-family: 'Josefin Sans', sans-serif;
 	padding: 5%;
 	text-decoration: none;
-	font-size: 4em;
+	font-size: 1.8em;
 	color: grey;
 	display: block;
 	transition: 0.5s;
